--- a/examples/ud4/ex1/style.css
+++ b/examples/ud4/ex1/style.css
@@ -1,97 +1,44 @@
-html,
 body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-
-body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   overflow: hidden;
-  background-image: url(./examples/ud4/ex1/img/img.jpeg);
+  background-image: url(./examples/ud4/ex1/img/agua.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
 
-.trigger {
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
+.onda div{
   position: absolute;
-  width: 5rem;
-  height: 5rem;
-  background: black;
+  width: 300px;
+  height: 300px;
+  background: transparent;
+  right: 0px;
+  bottom: 0px;
+  border: 1px solid #d7d7d7;
+  border-radius: 1000px;
+  transform-origin: center;
+}
+.onda1{
+  animation: goteo 4s infinite;
+}
+.onda2{
+  animation: goteo 4s infinite;
+  animation-delay: 0.3s;
+}
+.onda3{
+  animation: goteo 4s infinite;
+  animation-delay: 0.5s;
+}
+.onda4{
+  animation: goteo 4s infinite;
+  animation-delay: 0.7s;
+}
+.onda5{
+  animation: goteo 4s infinite;
+  animation-delay: 0.8s;
 }
 
-.trigger:hover {
-  background: #1b1b1b;
-}
 
-.trigger:hover .onda1 {
-  -webkit-animation: expandir 2s ease-in-out;
-          animation: expandir 2s ease-in-out;
-}
-
-.trigger:hover .onda2 {
-  -webkit-animation: expandir 2.2s ease-in-out;
-          animation: expandir 2.2s ease-in-out;
-}
-
-.trigger:hover .onda3 {
-  -webkit-animation: expandir 2.5s ease-in-out;
-          animation: expandir 2.5s ease-in-out;
-}
-
-.onda {
-  position: absolute;
-  width: 5rem;
-  height: 5rem;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  border: 1px solid rgba(0, 0, 0, 0.247);
-  border-radius: 50%;
-  -webkit-box-shadow: 3px 3px 5px 20px #005661;
-          box-shadow: 3px 3px 5px 20px #005661;
-  -webkit-box-shadow: inset 0 0 20px #000000;
-          box-shadow: inset 0 0 20px #000000;
-  opacity: 0;
-}
-
-@-webkit-keyframes expandir {
-  0% {
-    opacity: 1;
-    -webkit-box-shadow: inset 0 0 20px #0000002a;
-            box-shadow: inset 0 0 20px #0000002a;
-  }
-  100% {
-    -webkit-transform: scale(15);
-            transform: scale(15);
-    opacity: 0;
-  }
-}
-
-@keyframes expandir {
-  0% {
-    opacity: 1;
-    -webkit-box-shadow: inset 0 0 20px #0000002a;
-            box-shadow: inset 0 0 20px #0000002a;
-  }
-  100% {
-    -webkit-transform: scale(15);
-            transform: scale(15);
-    opacity: 0;
-  }
+@keyframes goteo {
+0%   {  scale: 0.1; }
+50%  {  opacity:1; }
+100% {  scale: 6; opacity:0;}
 }
