--- a/examples/ud3/ex7/style.css
+++ b/examples/ud3/ex7/style.css
@@ -1,134 +1,76 @@
-* {
-  font-family: Arial, Helvetica, sans-serif;
+.baraja {
+  width: 7.5in;
+  margin: 20px auto;
 }
 
-body {
-  margin: 0;
-}
-
-.slides {
-  display: flex;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 100%;
-}
-
-.slides > .slide {
-  flex: 1;
-  height: 600px;
-  border: 2px solid #e9e8ea;
-  border-left: none;
+.carta {
+  opacity: 0.7;
+  display: inline-block;
   position: relative;
-  background-color: white;
-  background-blend-mode: color;
+  overflow: hidden;
+  width: 2.47in;
+  height: 3.5in;
+  transition: all 0.5s;
+}
 
-  background-position: center;
+.carta>div {
+
+  width: 2.5in;
+  height: 3.5in;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.reverso,.anverso{
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
-.slide:last-child {
-  border-right: none;
+.reverso {
+  background-image: url('./examples/ud4/ex12/img/reverso_original.png');
+  z-index: 1;
+  transition: all 0.5s;
 }
 
-.slide:hover {
-  animation-name: slide;
-  animation-duration: 0.5s;
-  animation-timing-function: ease-out;
-  animation-iteration-count: 1;
-  animation-fill-mode: forwards;
+.anverso {
+  z-index: 0;
+  transition: all 0.5s;
 }
 
-@keyframes slide {
-  from {
-      background-color: white;
-  }
-  to {
-      background-color: rgba(0, 0, 0, 0.1);
-  }
+#pikachu .anverso {
+  background-image: url('./examples/ud4/ex12/img/pikachu.png');
 }
 
-.slide > .titulo {
-  background-color: white;
-  text-transform: uppercase;
-  padding: 20px;
-  font-size: 24px;
-
-  border-right: 2px solid #e9e8ea;
-  border-bottom: 2px solid #e9e8ea;
-  display: inline-block;
+#mimikyu .anverso {
+  background-image: url('./examples/ud4/ex12/img/mimikyu.png');
 }
 
-.slide > .boton {
-  background-color: black;
-  color: white;
-  padding: 10px;
-  padding-bottom: 20px;
-  padding-right: 40px;
-  display: inline-block;
-  position: absolute;
-  bottom: 30px;
-  left: 30px;
-  border-bottom: 2px solid black;
+#mew .anverso {
+  background-image: url('./examples/ud4/ex12/img/mew.png');
 }
 
-.slide > .boton::before {
-  content: "➡";
-  margin-right: 10px;
-}
-.slide:hover > .boton {
-  transition: border-color 0.5s;
-  border-color: white;
+.carta:hover {
+  opacity: 1;
   cursor: pointer;
 }
 
-.slide:hover > .titulo {
-  background-color: black;
-  color: white;
+.carta.girada:hover {
+  cursor: default;
 }
 
-.slide > p {
-  position: absolute;
-  bottom: 90px;
-  padding: 30px;
-  color: white;
-  line-height: 40px;
-  font-size: 15px;
+.girada {
+  opacity: 1;
+  transform: rotateY(180deg);
 }
 
-.slide:nth-child(1) {
-  background-image: url("./examples/ud3/ex4/img/trabajo1.jpg");
-}
-.slide:nth-child(2) {
-  background-image: url("./examples/ud3/ex4/img/trabajo2.png");
-}
-.slide:nth-child(3) {
-  background-image: url("./examples/ud3/ex4/img/trabajo3.jpg");
-}
-.slide:nth-child(4) {
-  background-image: url("./examples/ud3/ex4/img/trabajo4.jpg");
+.girada .anverso {
+  z-index: 1;
 }
 
-@media (max-width: 1320px) {
-  .slides {
-      flex-wrap: wrap;
-      position: relative;
-      transform: none;
-  }
-
-  .slides > .slide {
-      flex: 0 0 49%;
-  }
+.girada .reverso {
+  z-index: 0;
 }
 
-@media (max-width: 722px) {
-  .slides > .slide {
-      flex: 0 0 99%;
-  }
-}
-
-@media (max-height: 722px) {
-  .slides > .slide {
-      flex: 0 0 99%;
-  }
+.correcta{
+  
 }
