--- a/examples/ud4/ex3/style.css
+++ b/examples/ud4/ex3/style.css
@@ -1,3 +1,4 @@
+/**/
 html,
 body {
   margin: 0;
@@ -9,83 +10,164 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 8rem 0;
+  gap: 5rem;
+}
+
+.hourglass {
+  width: 10rem;
+  -webkit-animation: rotate 14s linear forwards;
+          animation: rotate 14s linear forwards;
+}
+
+.progress {
+  width: 80%;
+  height: 8rem;
+  border: 4px solid aquamarine;
+  border-radius: 5rem;
   overflow: hidden;
 }
 
-.papelera {
-  -webkit-transform: scale(0.5);
-          transform: scale(0.5);
-  position: relative;
+.progress__content {
+  height: 100%;
+  -webkit-animation: progress 14s linear forwards;
+          animation: progress 14s linear forwards;
 }
 
-.papelera__tapa {
-  top: -92px;
-  left: 16px;
-  position: absolute;
-  -webkit-transition: 0.8s cubic-bezier(0.15, 0.85, 0.57, 0.97);
-  transition: 0.8s cubic-bezier(0.15, 0.85, 0.57, 0.97);
-}
-
-.papelera__cuerpo {
-  z-index: 1;
-}
-
-.papelera__pedal {
-  position: absolute;
-  bottom: 76px;
-  left: 221px;
-  -webkit-transition: 0.8s cubic-bezier(0.15, 0.85, 0.57, 0.97);
-  transition: 0.8s cubic-bezier(0.15, 0.85, 0.57, 0.97);
-}
-
-.papelera__pedal:hover {
-  bottom: 50px;
-}
-
-.papelera__pedal:hover ~ .papelera__tapa {
-  top: -225px;
-}
-
-.papelera__pedal:hover ~ .pelota {
-  -webkit-animation: encestar 1s 0.8s cubic-bezier(0.15, 0.85, 0.57, 0.97) forwards;
-          animation: encestar 1s 0.8s cubic-bezier(0.15, 0.85, 0.57, 0.97) forwards;
-}
-
-.pelota {
-  position: absolute;
-  -webkit-transform: scale(0.08);
-          transform: scale(0.08);
-  top: -365px;
-  left: 500px;
-  z-index: -1;
-}
-
-@-webkit-keyframes encestar {
+@-webkit-keyframes rotate {
   0% {
-    top: -365px;
-    left: 500px;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
   }
   100% {
-    top: -200px;
-    left: -179px;
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg);
   }
 }
 
-@keyframes encestar {
+@keyframes rotate {
   0% {
-    top: -365px;
-    left: 500px;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
   }
   100% {
-    top: -200px;
-    left: -179px;
+    -webkit-transform: rotate(-360deg);
+            transform: rotate(-360deg);
+  }
+}
+
+@-webkit-keyframes progress {
+  0% {
+    width: 0%;
+    background: #2586f5;
+  }
+  13% {
+    background: #2586f5;
+  }
+  14% {
+    width: 20%;
+    background: #e7f525;
+  }
+  27% {
+    background: #e7f525;
+  }
+  28% {
+    width: 40%;
+    background: #7525f5;
+  }
+  41% {
+    background: #7525f5;
+  }
+  42% {
+    width: 50%;
+    background: #acf525;
+  }
+  55% {
+    background: #acf525;
+  }
+  56% {
+    width: 70%;
+    background: #eb1b1b;
+  }
+  69% {
+    background: #eb1b1b;
+  }
+  70% {
+    width: 20%;
+    background: #2586f5;
+  }
+  83% {
+    background: #2586f5;
+  }
+  84% {
+    width: 80%;
+    background: #24a02a;
+  }
+  100% {
+    width: 100%;
+    background: #24a02a;
+  }
+}
+
+@keyframes progress {
+  0% {
+    width: 0%;
+    background: #2586f5;
+  }
+  13% {
+    background: #2586f5;
+  }
+  14% {
+    width: 20%;
+    background: #e7f525;
+  }
+  27% {
+    background: #e7f525;
+  }
+  28% {
+    width: 40%;
+    background: #7525f5;
+  }
+  41% {
+    background: #7525f5;
+  }
+  42% {
+    width: 50%;
+    background: #acf525;
+  }
+  55% {
+    background: #acf525;
+  }
+  56% {
+    width: 70%;
+    background: #eb1b1b;
+  }
+  69% {
+    background: #eb1b1b;
+  }
+  70% {
+    width: 20%;
+    background: #2586f5;
+  }
+  83% {
+    background: #2586f5;
+  }
+  84% {
+    width: 80%;
+    background: #24a02a;
+  }
+  100% {
+    width: 100%;
+    background: #24a02a;
   }
 }
 /*# sourceMappingURL=style.css.map */
