--- a/examples/ud1/ex7/style.css
+++ b/examples/ud1/ex7/style.css
@@ -1,107 +1,167 @@
+@font-face {
+    font-family: myFont;
+    src: url(./examples/ud1/ex6/fonts/Chalet.woff);
+}
+
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
-  }
-  
-  .menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 95%;
-    margin: 0 auto;
-    font-family: "Orbitron", sans-serif;
-  }
-  
-  ol {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    margin-bottom: 10px;
+    color: black;
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+}
+
+html {
+    background-image: url(./examples/ud1/ex6/img/fondo.jpg);
+    font-family: "myFont", "sans-serif";
+    text-align: center;
+}
+
+.header {
+    background-color: #1E6381;
+}
+
+.header h1 {
+    color: #FF6600;
+}
+
+.contenedorImagen {
+    overflow: hidden;
+}
+
+.section img {
     width: 100%;
-    margin: 0 auto;
-    padding: 0.5em 0;
-    list-style: none;
-  }
-  
-  .menu-item {
-    background: #444;
-    padding: 1em 0.5em;
-    position: relative;
-    border-bottom: 5px solid #999;
-    margin: 0 0.1em;
-    
-    cursor: pointer;
-    min-width: 8em;
-    text-align: center;
-  }
-  .menu-item[aria-haspopup=true] {
-    border-bottom-color: #fc9b1b;
-  }
-  .menu-item:hover, .menu-item:focus-within {
-    border-bottom-color: #91d36b;
-    background: #333;
-  }
-  .menu-item:hover .sub-menu, .menu-item:hover .sub-menu:hover, .menu-item:focus-within .sub-menu, .menu-item:focus-within .sub-menu:hover {
-    visibility: visible;
-    opacity: 1;
-    display: flex;
-  }
-  
-  .sub-menu {
-    flex-direction: column;
-    align-items: flex-start;
-    position: absolute;
-    left: 0;
-    margin-top: 1em;
-    visibility: hidden;
-    display: none;
-    opacity: 0;
-  }
-  .sub-menu .menu-item {
-    margin: 0.1em 0;
-    padding: 1em;
-    width: 10em;
-    text-align: center;
-    z-index: 2;
-  }
-  
-  a {
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-  }
-  a:focus {
-    outline: none;
-  }
-  
-  @media (max-width: 690px) {
-    .menu {
-      width: 95%;
-      font-size: 16px;
+    transform: scale(2);
+    transform-origin: right bottom;
+}
+
+.aside {
+    background-color: #ccc;
+    display: table-cell;
+    float: right;
+    vertical-align: middle;
+}
+
+.section {
+    background-color: white;
+}
+
+.footer {
+    color: white;
+    background-color: black;
+}
+
+
+/* For mobile phones: */
+
+[class*="col-"] {
+    width: 100%;
+}
+
+
+/* @media only screen and (min-width: 600px) {
+     For tablets: 
+    .col-s-1 {
+        width: 8.33%;
     }
-  
-    .menu-item {
-      margin: 0.1em;
+    .col-s-2 {
+        width: 16.66%;
     }
-    .menu-item:nth-child(1) {
-      order: 0;
+    .col-s-3 {
+        width: 25%;
     }
-    .menu-item:nth-child(2) {
-      order: 1;
+    .col-s-4 {
+        width: 33.33%;
     }
-    .menu-item:nth-child(3) {
-      order: 3;
+    .col-s-5 {
+        width: 41.66%;
     }
-    .menu-item:nth-child(4) {
-      order: 4;
+    .col-s-6 {
+        width: 50%;
     }
-    .menu-item:nth-child(5) {
-      order: 2;
+    .col-s-7 {
+        width: 58.33%;
     }
-  }
-  @media (max-width: 480px) {
-    .menu {
-      font-size: 12px;
+    .col-s-8 {
+        width: 66.66%;
     }
-  }
+    .col-s-9 {
+        width: 75%;
+    }
+    .col-s-10 {
+        width: 83.33%;
+    }
+    .col-s-11 {
+        width: 91.66%;
+    }
+    .col-s-12 {
+        width: 100%;
+    }
+} */
+
+@media only screen and (min-width: 768px) {
+
+    /* For desktop: */
+    .col-1 {
+        width: 8.33%;
+    }
+
+    .col-2 {
+        width: 16.66%;
+    }
+
+    .col-3 {
+        width: 25%;
+    }
+
+    .col-4 {
+        width: 33.33%;
+    }
+
+    .col-5 {
+        width: 41.66%;
+    }
+
+    .col-6 {
+        width: 50%;
+    }
+
+    .col-7 {
+        width: 58.33%;
+    }
+
+    .col-8 {
+        width: 66.66%;
+    }
+
+    .col-9 {
+        width: 75%;
+    }
+
+    .col-10 {
+        width: 83.33%;
+    }
+
+    .col-11 {
+        width: 91.66%;
+    }
+
+    .col-12 {
+        width: 100%;
+    }
+
+    .section img {
+        object-fit: contain;
+        width: 100%;
+        transform: none;
+    }
+}
