--- a/examples/ud1/ex3/style.css
+++ b/examples/ud1/ex3/style.css
@@ -1,207 +1,97 @@
-html,
-body {
-  margin: 0;
-  font-family: "trebuchet ms", arial, sans-serif;
-  font-style: normal;
+ul,
+ul li {
+    margin: 0;
+    padding: 0;
+    list-style: none
 }
 
-body {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+h1,
+h2,
+h3,
+p,
+form {
+    margin: 0;
+    padding: 0
 }
 
-ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-  background-color: #232323;
-  color: #535353;
+.clear {
+    clear: both
 }
 
-a {
-  text-decoration: none;
-  color: white;
+img {
+    border: none
 }
 
-.wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+#contenedor {
+    width: 90%;
+    max-width: 900px;
+    margin: 0 auto
 }
 
-.row1 {
-  height: 7rem;
-  background-color: #333333;
+#cabecera,
+#menu,
+#lateral,
+#contenido,
+#contenido #principal,
+#contenido #secundario,
+#pie {
+    border: 2px solid #777
 }
 
-.row1 #header {
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 960px;
+#cabecera {
+    clear: both
 }
 
-.row1 #header #hgroup {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+#menu {
+    clear: both
 }
 
-.row1 #header #hgroup h1 a,
-.row1 #header #hgroup h2 {
-  font-family: auto;
-  font-weight: normal;
-  font-size: 1rem;
-  color: #b4b4b4;
+#lateral {
+    float: left;
+    width: 20%
 }
 
-.row1 #header #hgroup h1 a {
-  font-size: 36px;
+#contenido {
+    float: right;
+    width: 78%
 }
 
-.row1 #header #hgroup h1,
-.row1 #header #hgroup h2 {
-  margin: 0;
+#contenido #principal {
+    float: left;
+    width: 78%
 }
 
-.row1 #header #hgroup h2 {
-  font-size: 14px;
+#contenido #secundario {
+    float: right;
+    width: 20%
 }
 
-.row1 #header nav {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  margin: auto;
+#pie {
+    clear: both
 }
 
-.row1 #header nav ul {
-  margin: 0;
-  padding: 0;
+#cabecera #logo {
+    float: left
 }
 
-.row1 #header nav li {
-  padding: 1rem 0.5rem;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  font-family: serif;
-  text-transform: uppercase;
-  font-size: 1rem;
+#cabecera #buscador {
+    float: right
 }
 
-.row1 #header nav li a {
-  font-size: 12px;
-  color: #b4b4b4;
+#menu ul#menu_principal li {
+    display: inline;
+    float: left
 }
 
-.row2 {
-  width: 960px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  margin: 0 auto;
-  padding: 2rem 0;
+#contenido #principal .articulo img {
+    width: 100px;
+    float: left
 }
 
-.row2 #slider {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+#pie .enlaces {
+    float: left
 }
 
-.row2 #services {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-top: 2rem;
+#pie .copyright {
+    float: right
 }
-
-.row2 #services .one_third figure {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  margin: 0;
-}
-
-.row2 #services .one_third figure img {
-  padding: 0.25rem;
-  border: 1px solid #bdbdbd;
-}
-
-.row2 #services .one_third figcaption {
-  width: 290px;
-  color: gray;
-}
-
-.row2 #services .one_third figcaption h2 {
-  font-style: italic;
-}
-
-.row2 #services .one_third figcaption .more {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-}
-
-.row2 #services .one_third figcaption .more a {
-  color: orange;
-}
-
-.row3 {
-  height: 5rem;
-  background-color: #333333;
-}
-
-.row4 {
-  height: 10rem;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  padding-left: 1rem;
-  background-color: #232323;
-}
-
-.row4 a,
-.row4 p {
-  color: #b4b4b4;
-}
-
-.row4 #copyright {
-  width: 960px;
-  margin: 0 auto;
-}
-/*# sourceMappingURL=layout.css.map */
